add register screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ flutter:
     - icon.png
     - ic_facebook.png
     - ic_twitter.png
+    - img_line.png
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
